	This version is in perl5 core since v5.10.1
        updated with 71605646f0e67f65c13aa000ef0881ebb82461a5

        No Changes

0.23	Tue Oct 19 20:17:22 2010 +0200
        Add option croak_on_error to PROXYSUBS, to directly croak() the error message.

        This is only useful with the code that generates Proxy
        Constant Subroutines, as this adds all known constants to the
        symbol table at compile time, meaning that the only calls to
        AUTOLOAD will be to load constants not available on this platform,
        or for invalid constant names.

        This version is in perl5 core since v5.13.7 updated with
        04777d295957ad270

0.23_01 Sun Aug 30 15:18:28 2015 +0200 (rurban)
        Fixed all RT bugs by many users:
        RT #105813 $->[1] typo (hurricup)
        avoid 'uninit' warning (davem)
        skip context with threads (bulk88)
        typo: C_constant_prefix_param_defintion (rurban)
        RT #88645: fix crosscompiling without make (fperrad)
        RT #85527: typo fixes (dsteinbrunner)
        RT #63832: printf warnings from EU:C (zefram)
        RT #81249: test fix-ups for VMS (cberry)
        RT #78188: add a sleep 1 to test (rurban)
        RT #73041: fix newSVpvn_flags SVs_TEMP for <5.10.1 (rurban)
        RT #64965: fix croak_sv for <5.013 (rurban)

0.23_02 2015-12-14 12:06:07 rurban
        Fixed syntax error in a generated xs.inc
        Fixed parallel test warnings: jobserver unavailable

0.23_03 2016-02-26 12:14:20 rurban
        Fixed typo C_constant_other_params_definition to
          C_constant_other_params_definition throughout
        Fixed podchecker violations.
        Tested with cperl

0.23_04 2017-04-23 rurban
        Fix ProxySubs to generate code also valid for 5.8 - 5.14.
        Add testcases for the 4 ProxySubs options.
        Warn against its usage on creation.

0.23_05 2017-04-23 rurban
        Fix the tests under CORE

0.23_06 2017-04-24 rurban
        Fixed PROXYSUBS push and croak_on_error for 5.8