@@ -101,3 +101,4 @@ history can be found via http://perl5.git.perl.org/perl.git/tree/HEAD:/lib ]
 
 0.23_06 2017-04-24 rurban
         Fixed PROXYSUBS push and croak_on_error for 5.8
+        Fixed PROXYSUBS without options for 5.6
